--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "moonshield-table": "^1.0.13",
     "proptypes": "^1.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.24.0",
